--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,1 +1,5 @@
-/*# sourceMappingURL=bio.css.map */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}/*# sourceMappingURL=bio.css.map */
