--- a/styles/bio.css
+++ b/styles/bio.css
@@ -25,8 +25,11 @@
 .navigation {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  display: flex;
+  align-content: center;
+  justify-content: center;
   background-color: #323232;
+  color: #FFFFFF;
   text-decoration: none;
 }
 .navigation__title {
@@ -40,5 +43,67 @@
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
+  }
+}
+.hero {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 30vh;
+  color: #FFFFFF;
+}
+.hero__title {
+  z-index: 1;
+  align-self: center;
+  justify-content: center;
+}
+
+.introduction {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.introduction__title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  font-family: "Avenir Next Bold";
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .introduction__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 700;
+  }
+}
+.introduction__img {
+  padding: 16px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 767px) {
+  .introduction {
+    padding: 24px 16px 16px 16px;
+  }
+}
+
+.gallery {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.gallery__imgs {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .gallery {
+    padding: 16px 16px 0 16px;
   }
 }/*# sourceMappingURL=bio.css.map */
