--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,3 +3,105 @@
 @use './partials/typography' as *;
 @use './partials/global' as *;
 
+
+
+
+.hero{
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
+    background-size: cover;
+    width: 100%;
+    height: 30vh;
+    color: $primary-light-text;
+    @include flex-center;
+    @include flex-column;
+    @include section-header-mobile
+
+    &__title{
+        z-index: 1;
+        align-self: center;
+        justify-content: center;
+
+    }
+    @include mobile {
+        @include page-header-mobile;
+    }
+}
+
+.introduction{
+    width: 100%;
+    @include flex-column;
+
+    &__title{
+        @include section-header;
+    }
+    &__img{
+        padding: 16px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+    &__content{
+
+    }
+    &_text{
+
+
+    }
+    @include mobile {
+        padding: 24px 16px 16px 16px;
+    }
+    @include tablet{
+
+    }
+    @include desktop{
+
+    }
+
+
+}
+
+
+.about{
+
+    &__title{
+    
+    }
+    &__content{
+
+    }
+    @include mobile{
+
+    }
+    @include tablet{
+
+    }
+    @include desktop{
+        
+    }
+
+}
+
+
+.gallery{
+    width: 100%;
+    @include flex-column;
+
+    &__title{
+
+    }
+    &__imgs{
+        width: 100%;
+    }
+
+    @include mobile {
+        padding: 16px 16px 0 16px;
+    }
+    @include tablet{
+
+    }
+    @include desktop{
+        
+    }
+}
