--- a/styles/bio.css
+++ b/styles/bio.css
@@ -38,6 +38,13 @@
   font-weight: 700;
   font-family: "Avenir Next Bold";
 }
+@media (max-width: 767px) {
+  .navigation__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+  }
+}
 @media (min-width: 768px) and (max-width: 1279px) {
   .navigation__title {
     font-size: 3.75rem;
@@ -45,24 +52,61 @@
     font-weight: 700;
   }
 }
+@media (max-width: 767px) {
+  .navigation {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    font-family: "Avenir Next Bold";
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .navigation {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .navigation {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+  }
+}
 .hero {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
   background-size: cover;
   width: 100%;
   height: 30vh;
   color: #FFFFFF;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 400;
+  font-family: "Avenir Next";
+}
+@media (max-width: 767px) {
+  .hero {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .hero {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 400;
+  }
 }
 .hero__title {
-  z-index: 1;
-  align-self: center;
-  justify-content: center;
+  padding: 1.25rem;
 }
-
 .introduction {
   width: 100%;
   display: flex;
@@ -71,14 +115,21 @@
 .introduction__title {
   font-size: 1.5rem;
   line-height: 2rem;
-  font-weight: 700;
-  font-family: "Avenir Next Bold";
+  font-weight: 400;
+  font-family: "Avenir Next";
+}
+@media (max-width: 767px) {
+  .introduction__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+  }
 }
 @media (min-width: 768px) and (max-width: 1279px) {
   .introduction__title {
     font-size: 2.25rem;
     line-height: 2.75rem;
-    font-weight: 700;
+    font-weight: 400;
   }
 }
 .introduction__img {
@@ -93,7 +144,6 @@
     padding: 24px 16px 16px 16px;
   }
 }
-
 .gallery {
   width: 100%;
   display: flex;
