--- a/styles/bio.css
+++ b/styles/bio.css
@@ -40,7 +40,7 @@
 }
 @media (max-width: 767px) {
   .navigation__title {
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
   }
@@ -88,11 +88,23 @@
     font-weight: 700;
   }
 }
+@media (max-width: 767px) {
+  .navigation {
+    padding: 24px 16px 16px 16px;
+  }
+}
+
+.footer {
+  background-color: #323232;
+  color: #FFFFFF;
+}
+
 .hero {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
   background-size: cover;
   width: 100%;
   height: 30vh;
+  background-position: fixed;
   color: #FFFFFF;
   display: flex;
   align-content: center;
@@ -109,7 +121,7 @@
 }
 @media (max-width: 767px) {
   .hero__title {
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
   }
@@ -129,13 +141,13 @@
   }
 }
 @media (max-width: 767px) {
-  .introduction {
+  .about {
     padding: 24px 16px 16px 16px;
     width: 100%;
     display: flex;
     flex-direction: column;
   }
-  .introduction__title {
+  .about__title {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
@@ -144,34 +156,34 @@
   }
 }
 @media (max-width: 767px) and (max-width: 767px) {
-  .introduction__title {
-    font-size: 1.875rem;
+  .about__title {
+    font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
   }
 }
 @media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
-  .introduction__title {
+  .about__title {
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
   }
 }
 @media (max-width: 767px) and (min-width: 1280px) {
-  .introduction__title {
+  .about__title {
     font-size: 3.75rem;
     line-height: 4.25rem;
     font-weight: 700;
   }
 }
 @media (max-width: 767px) {
-  .introduction__img {
+  .about__img {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .introduction__content {
+  .about__content {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 400;
@@ -180,36 +192,36 @@
   }
 }
 @media (max-width: 767px) and (max-width: 767px) {
-  .introduction__content {
+  .about__content {
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 400;
   }
 }
 @media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
-  .introduction__content {
+  .about__content {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 400;
   }
 }
 @media (max-width: 767px) and (min-width: 1280px) {
-  .introduction__content {
+  .about__content {
     font-size: 2.25rem;
     line-height: 2.75rem;
     font-weight: 400;
   }
 }
 @media (max-width: 767px) {
-  .introduction--quote-author {
+  .about--quote-author {
     margin: 25px 20px 0 0;
   }
 }
 @media (max-width: 767px) {
-  .about {
+  .information {
     padding: 24px 16px 16px 16px;
   }
-  .about__title {
+  .information__title {
     font-size: 0.875rem;
     line-height: 1.375rem;
     font-weight: 600;
@@ -218,28 +230,28 @@
   }
 }
 @media (max-width: 767px) and (max-width: 767px) {
-  .about__title {
+  .information__title {
     font-size: 0.875rem;
     line-height: 1.375rem;
     font-weight: 600;
   }
 }
 @media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
-  .about__title {
+  .information__title {
     font-size: 1.5rem;
     line-height: 1.375rem;
     font-weight: 600;
   }
 }
 @media (max-width: 767px) and (min-width: 1280px) {
-  .about__title {
+  .information__title {
     font-size: 1.5rem;
     line-height: 1.375rem;
     font-weight: 600;
   }
 }
 @media (max-width: 767px) {
-  .about__content {
+  .information__content {
     font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: 400;
@@ -247,21 +259,21 @@
   }
 }
 @media (max-width: 767px) and (max-width: 767px) {
-  .about__content {
+  .information__content {
     font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: 400;
   }
 }
 @media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
-  .about__content {
+  .information__content {
     font-size: 0.875rem;
     line-height: 1.375rem;
     font-weight: 400;
   }
 }
 @media (max-width: 767px) and (min-width: 1280px) {
-  .about__content {
+  .information__content {
     font-size: 0.875rem;
     line-height: 1.375rem;
     font-weight: 400;
@@ -282,7 +294,7 @@
 }
 @media (max-width: 767px) {
   .gallery__title {
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
   }
