--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -11,6 +11,7 @@
     background-size: cover;
     width: 100%;
     height: 30vh;
+    background-position: fixed;
     color: $primary-light-text;
     @include flex-center;
     @include flex-column;
@@ -24,7 +25,7 @@
     }
 }
 
-.introduction{
+.about{
 //     width: 100%;
 //     @include flex-column;
 
@@ -82,7 +83,7 @@
 }
 
 
-.about{
+.information{
     // @include mobile_padding;
 
     // &__title{
