--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,19 +1,19 @@
 @font-face {
   font-family: "Avenir Next Regular";
   src: url("/assets/font/AvenirNextLTPro-Regular.otf");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Avenir Next Bold";
   src: url("/assets/font/AvenirNextLTPro-Bold.otf");
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "Avenir Next Demi";
   src: url("/assets/font/AvenirNextLTPro-Demi.otf");
-  font-weight: bold;
+  font-weight: 600;
   font-style: normal;
 }
 * {
@@ -32,40 +32,20 @@
   color: #FFFFFF;
   text-decoration: none;
 }
-.navigation__title {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  font-weight: 700;
-  font-family: "Avenir Next Demi";
-}
-@media (max-width: 767px) {
-  .navigation__title {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    font-weight: 700;
-  }
-}
-@media (min-width: 768px) and (max-width: 1279px) {
-  .navigation__title {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-    font-weight: 700;
-  }
-}
-@media (min-width: 1280px) {
-  .navigation__title {
-    font-size: 3.75rem;
-    line-height: 4.25rem;
-    font-weight: 700;
-  }
+.navigation__icon {
+  margin-bottom: 1rem;
 }
 .navigation__btns {
   font-size: 0.625rem;
   line-height: 1.25rem;
   font-weight: 700;
   font-family: "Avenir Next Bold";
+  display: flex;
+  flex-direction: row;
   color: #FFFFFF;
-  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  gap: 7rem;
 }
 @media (max-width: 767px) {
   .navigation__btns {
@@ -88,6 +68,11 @@
     font-weight: 700;
   }
 }
+.navigation__btns a {
+  color: #FFFFFF;
+  text-decoration: none;
+  list-style: none;
+}
 @media (max-width: 767px) {
   .navigation {
     padding: 24px 16px 16px 16px;
@@ -97,6 +82,393 @@
 .footer {
   background-color: #323232;
   color: #FFFFFF;
+}
+@media (max-width: 767px) {
+  .footer {
+    padding: 24px 16px 16px 16px;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer .in-touch {
+    margin-bottom: 1rem;
+  }
+  .footer .in-touch__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+    font-family: "Avenir Next Demi";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .in-touch__title {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .in-touch__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .in-touch__title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .in-touch__media-icons {
+    display: flex;
+    gap: 40px;
+    width: 50px;
+  }
+  .footer .management {
+    margin-bottom: 1rem;
+  }
+  .footer .management__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .management__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .management__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .management__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) {
+  .footer .management__address {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .management__address {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .management__address {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .management__address {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .management__email {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .management__email {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .management__email {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .management__email {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .artist-group {
+    margin-bottom: 1rem;
+  }
+  .footer .artist-group__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .artist-group__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .artist-group__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .artist-group__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) {
+  .footer .artist-group__booking {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .artist-group__booking {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .artist-group__booking {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .artist-group__booking {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .artist-group__email {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .artist-group__email {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .artist-group__email {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .artist-group__email {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .arch-entertainment {
+    margin-bottom: 1rem;
+  }
+  .footer .arch-entertainment__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .arch-entertainment__title {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .arch-entertainment__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .arch-entertainment__title {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (max-width: 767px) {
+  .footer .arch-entertainment__booking {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .arch-entertainment__booking {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .arch-entertainment__booking {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .arch-entertainment__booking {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .arch-entertainment__email {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .arch-entertainment__email {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .arch-entertainment__email {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .arch-entertainment__email {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .footer-logo {
+    margin-bottom: 1rem;
+  }
+  .footer .footer-logo__title-mobile {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    font-family: "Avenir Next Bold";
+    margin-bottom: 1rem;
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .footer-logo__title-mobile {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .footer-logo__title-mobile {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .footer-logo__title-mobile {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+  }
+}
+@media (max-width: 767px) {
+  .footer .footer-logo__copyright {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+    font-family: "Avenir Next Regular";
+  }
+}
+@media (max-width: 767px) and (max-width: 767px) {
+  .footer .footer-logo__copyright {
+    font-size: 0.8125rem;
+    line-height: 1.125rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 768px) and (max-width: 1279px) {
+  .footer .footer-logo__copyright {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) and (min-width: 1280px) {
+  .footer .footer-logo__copyright {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+}
+@media (max-width: 767px) {
+  .footer .footer-logo__title--tablet {
+    display: none;
+  }
 }
 
 .hero {
@@ -117,7 +489,7 @@
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  font-family: "Avenir Next Demi";
+  font-family: "Avenir Next Bold";
 }
 @media (max-width: 767px) {
   .hero__title {
@@ -151,7 +523,7 @@
     font-size: 1.5rem;
     line-height: 2rem;
     font-weight: 700;
-    font-family: "Avenir Next Demi";
+    font-family: "Avenir Next Bold";
     padding-bottom: 1.25rem;
   }
 }
@@ -182,6 +554,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
   }
   .about__content {
     font-size: 1.5rem;
@@ -289,7 +662,7 @@
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
-  font-family: "Avenir Next Demi";
+  font-family: "Avenir Next Bold";
   padding: 16px 0;
 }
 @media (max-width: 767px) {
