--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 30vh;
     background-position: fixed;
-    color: $primary-light-text;
+    color: $white;
     @include flex-center;
     @include flex-column;
 
@@ -62,6 +62,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-bottom: 20px;
     
         }
         &__content{
@@ -117,7 +118,7 @@
 .gallery{
     width: 100%;
     @include flex-column;
-    background-color: $alt-background;
+    background-color: $alabaster;
     
 
     &__title{
