--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -10,7 +10,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
     background-size: cover;
     width: 100%;
-    height: 30vh;
+    height: 35vh;
     background-position: fixed;
     color: $white;
     @include flex-center;
@@ -20,90 +20,57 @@
         padding: 1.25rem;
         @include page-header;
     }
-    @include mobile {
+    @include tablet {
         
     }
+    @include desktop{}
 }
 
 .about{
-//     width: 100%;
-//     @include flex-column;
+    @include mobile_padding;
+    width: 100%;
+    @include flex-column;
 
-//     &__title{
-//         @include page-header;
-//         padding-left: 20px;
-//     }
-//     &__img{
-//         padding: 16px;
-//         width: 100%;
-//         display: flex;
-//         align-items: center;
-//         justify-content: center;
-
-//     }
-//     &__content{
-//         @include section-header;
-//         margin-left: 10px;
-// } 
-//     &--quote-author{
-//         margin: 20px 20px 0 0;
-//     }
-    @include mobile {
-        @include mobile_padding;
+    &__title{
+        @include page-header;
+        padding-bottom: 1.25rem;
+    }
+    &__img{
         width: 100%;
-        @include flex-column;
-    
-        &__title{
-            @include page-header;
-            padding-bottom: 1.25rem;
-        }
-        &__img{
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 20px;
-    
-        }
-        &__content{
-            @include section-header;
-            margin-left: 10px;
-    } 
-        &--quote-author{
-            margin: 25px 20px 0 0;
-        }
-    }
-    @include tablet{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 20px;
 
     }
-    @include desktop{
-
+    &__content{
+        @include section-header;
+        margin-left: 10px;
+} 
+    &--quote-author{
+        margin: 25px 20px 0 0;
     }
+}
+@include tablet{
 
+}
+@include desktop{
 
 }
 
 
+
+
+
 .information{
-    // @include mobile_padding;
+    @include mobile_padding;
 
-    // &__title{
-    //     @include subheader;
-    //     padding-bottom: 20px;
-    // }
-    // &__content{
-    //     @include body;
-    // }
-    @include mobile{
-        @include mobile_padding;
-
-        &__title{
-            @include subheader;
-            padding-bottom: 20px;
-        }
-        &__content{
-            @include body;
-        }
+    &__title{
+        @include subheader;
+        padding-bottom: 20px;
+    }
+    &__content{
+        @include body;
     }
     @include tablet{
 
@@ -111,14 +78,15 @@
     @include desktop{
         
     }
-
 }
+
 
 
 .gallery{
     width: 100%;
     @include flex-column;
     background-color: $alabaster;
+    @include mobile_padding;
     
 
     &__title{
@@ -130,10 +98,6 @@
     &__imgs{
         width: 100%;
         padding: 10px 0;
-    }
-
-    @include mobile {
-        padding: 16px 16px 0 16px;
     }
     @include tablet{
 
