--- a/styles/bio.css
+++ b/styles/bio.css
@@ -94,6 +94,71 @@ html, body {
 .navigation__btns a.inactive {
   font-weight: 400;
 }
+@media (min-width: 768px) and (max-width: 1279px) {
+  .navigation {
+    display: flex;
+    flex-direction: row;
+    padding: 48px 36px 36px 36px;
+    position: relative;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .navigation__icon {
+    width: 20%;
+    margin-bottom: 0;
+  }
+  .navigation__btns {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+    font-family: "Avenir Next Demi";
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #FFFFFF;
+    list-style: none;
+    margin: 0;
+    width: 40%;
+    position: relative;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) and (min-width: 768px) and (max-width: 1279px) {
+  .navigation__btns {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) and (min-width: 1280px) {
+  .navigation__btns {
+    font-size: 1.5rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .navigation__btns a {
+    color: #FFFFFF;
+    text-decoration: none;
+    list-style: none;
+    position: relative;
+    padding-bottom: 35px;
+  }
+  .navigation__btns a.active::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 100%; /* Adjust this value to make the border longer */
+    height: 4px;
+    background-color: #FFFFFF;
+    transform: translateX(-50%); /* Center the border horizontally */
+    transition: background-color 0.6s ease-in-out;
+  }
+  .navigation__btns a.inactive {
+    font-weight: 400;
+  }
+}
 .footer {
   background-color: #323232;
   color: #FFFFFF;
