--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -116,17 +116,17 @@
             margin-bottom: 30px;
         }
         &__img{
-            width: 85%;
+            width: 80%;
             height: 20%;
             @include flex-center;
             margin-bottom: 20px;
-            margin-left: 100px;
+            margin-left: 130px;
             flex-wrap: wrap;
     
         }
         &__content{
             @include subheader;
-            margin-left: 100px;
+            margin-left: 130px;
             margin-right: 400px;
 
             &--quote-author{
@@ -137,9 +137,6 @@
     
     }
     }
-
-
-
 
 
 
@@ -188,7 +185,7 @@
         &__title{
             @include subheader;
             padding-bottom: 20px;
-            margin-left: 100px;
+            margin-left: 125px;
             width: 100%;
         }
         &__content{
@@ -199,8 +196,8 @@
             margin-right: 80px;
 
             &-item {
-                margin-left: 20px;
-                margin-right: 20px;
+                margin-left: 50px;
+                margin-right: 50px;
             }
         }
         
@@ -240,6 +237,12 @@
             @include section-header;
             padding: 10px;
         }
+        &__img-section{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
         &__imgs{
             width: 29%;
             padding: 10px 10px;
@@ -247,6 +250,31 @@
         }
     }
     @include desktop{
+        width: 100%;
+        @include flex-column;
+        background-color: $alabaster;
+        @include tablet_padding;
+        justify-content: center;
         
+    
+        &__title{
+            width: 100%;
+            @include section-header;
+            padding: 10px;
+            margin-left: 80px;
+            margin-bottom: 20px;
+        }
+
+        &__img-section{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+        &__imgs{
+            width: 29%;
+            padding: 10px 10px;
+            flex-wrap: wrap;
+        }
     }
 }
