--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,33 +3,33 @@
 @use './partials/typography' as *;
 @use './partials/global' as *;
 
-
-
-
 .hero{
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
     background-size: cover;
     width: 100%;
-    height: 35vh;
-    background-position: fixed;
+    height: 66.5vw;
+    min-height: 11.6875rem;
+    max-height: 43.75rem;
+    background-position: center;
     color: $white;
-    // @include flex-center;
+    @include flex-center;
+    @include flex-column;
 
     &__title{
-        padding: 1.25rem;
+        padding: 1.5rem;
         @include page-header;
     }
-
     @include tablet {
         width: 100%;
-        height: 70vh;
-        background-position: fixed;
+        height: 66.5vw;
+        min-height: 11.6875rem;
+        max-height: 43.75rem;
+        background-position: center;
         @include flex-center;
         @include flex-column;
-        // margin-left: 10x;
     
         &__title{
-            padding: 1.25rem;
+            padding: 3rem;
             @include page-header;
         }
     }
@@ -39,15 +39,15 @@
         background-position: fixed;
         @include flex-center;
         @include flex-column;
-        // margin-left: 10x;
     
         &__title{
-            padding: 1.25rem;
+            padding: 5rem;
             @include page-header;
         }
     }
 }
 
+// About the Musicians 
 .about{
     @include mobile_padding;
     width: 100%;
@@ -62,15 +62,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-bottom: 20px;
+        margin-bottom: 1.25rem;
 
     }
     &__content{
-        @include section-header;
-        margin-left: 10px;
-} 
-    &--quote-author{
-        margin: 25px 20px 0 0;
+        @include subheader;
+        color: $bandSite-black;
+    } 
+    &__quote-author{
+        @include body;
+        color: $bandSite-black;
+        margin: -0.625rem 0;
     }
 
     @include tablet{
@@ -86,23 +88,22 @@
         &__img{
             width: 90%;
             @include flex-center;
-            margin-bottom: 20px;
-            margin-left: 50px;
-            flex-wrap: wrap;
-    
+            margin: .625rem 0 1.25rem 2.6rem;
         }
         &__content{
             @include subheader;
-            margin-left: 50px;
-            margin-right: 10px;
-
-            &--quote-author{
-                @include body;
-                margin: 35px 20px 0 0;
-            }
+            color: $bandSite-black;
+            margin: 0 5rem; 
+            margin-left: 2.5rem;
+            margin-right: 5rem;
+            margin-bottom: -1.875rem;
         } 
+        &__quote-author{
+            @include body;
+            color: $bandSite-black;
+            margin: 30px 0 -20px 40px;
+        }
     }
-
     @include desktop{
         @include tablet_padding;
         width: 100%;
@@ -126,20 +127,20 @@
         }
         &__content{
             @include subheader;
+            color: $bandSite-black;
             margin-left: 130px;
             margin-right: 400px;
-
-            &--quote-author{
-                @include body;
-                margin-top: 70px;
-            }
+        }
+        &__quote-author{
+            @include body;
+            color: $bandSite-black;
+            margin: 30px 0 -20px 40px;
         }
     
     }
-    }
+}
 
-
-
+// information about the band
 .information{
     @include mobile_padding;
 
@@ -150,7 +151,6 @@
     &__content{
         @include body;
     }
-
     @include tablet{
         @include tablet_padding;
         display: flex;
@@ -168,7 +168,7 @@
             display: flex;
             flex-direction: row;
             margin-left: 20px;
-            margin-right: 20px;
+            margin-right: 30px;
 
             &-item {
                 margin-left: 20px;
@@ -199,31 +199,24 @@
                 margin-left: 50px;
                 margin-right: 50px;
             }
-        }
-        
+        } 
     }
 }
-
-
-
+// Gallery photos
 .gallery{
     width: 100%;
     @include flex-column;
     background-color: $alabaster;
     @include mobile_padding;
     
-
     &__title{
         @include page-header;
         padding: 16px 0;
-
-
     }
     &__imgs{
         width: 100%;
         padding: 10px 0;
     }
-
     @include tablet{
         width: 100%;
         @include flex-column;
@@ -231,7 +224,6 @@
         @include tablet_padding;
         justify-content: center;
         
-    
         &__title{
             width: 100%;
             @include section-header;
@@ -256,7 +248,6 @@
         @include tablet_padding;
         justify-content: center;
         
-    
         &__title{
             width: 100%;
             @include section-header;
@@ -264,7 +255,6 @@
             margin-left: 80px;
             margin-bottom: 20px;
         }
-
         &__img-section{
             display: flex;
             flex-wrap: wrap;
